# secrets-scanner-cli

./: .gitignore  README.md  TO-DO.md  pyproject.toml  scan_loop.py  scanner.py
.github/workflows/: package-publish.yaml
secrets_scanner/: scanner.py
src/: scan_loop.py  scanner.py
